# architecture-otus-2

./: pyproject.toml
.github/workflows/: lint-test.yml
architecture_otus_2/: event_loop.py  main.py  move.py  rotate.py  vector.py
architecture_otus_2/auto_generated_adapters/: autogenerated.py
architecture_otus_2/commands/: __init__.py  burn_fuel.py  change_velocity.py  check_fuel.py  interfaces.py  macro_command.py  move.py  rotate.py
architecture_otus_2/exception_handler/: __init__.py  commands.py  exception_handler.py  handlers.py  interfaces.py
architecture_otus_2/operation_handler/: endpoint.py  interpret_command.py  models.py
tests/: test_burn_fuel.py  test_change_velocity_command.py  test_check_fuel.py  test_event_loop.py  test_move.py  test_move_with_fuel.py  test_rotate.py
tests/autogenerated/: test_generated_adapter.py
tests/exception_handler/: test_commands.py  test_exception_handler.py  test_handlers.py
tests/integrations/: test_exception_handler_strategy.py
